# turtlebot4_tutorials

./: README.md
.github/workflows/: ci.yml
turtlebot4_cpp_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot4_cpp_tutorials/src/: turtlebot4_first_cpp_node.cpp
turtlebot4_openai_tutorials/: package.xml  setup.cfg  setup.py
turtlebot4_openai_tutorials/launch/: natural_language_nav_launch.py
turtlebot4_openai_tutorials/prompts/: turtlebot4_api.txt
turtlebot4_openai_tutorials/turtlebot4_openai_tutorials/: natural_language_nav.py
turtlebot4_python_tutorials/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
turtlebot4_python_tutorials/turtlebot4_python_tutorials/: create_path.py  follow_waypoints.py  mail_delivery.py  nav_through_poses.py  nav_to_pose.py  patrol_loop.py  turtlebot4_first_python_node.py
turtlebot4_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
